project-parser/ocaml/Parser.output
   0  $accept : %entry% $end

   1  program : protodecs classdecs stm T_Eof

   2  protodec : T_Protocol id typevars extends T_LCur_Bracket funprotos T_RCur_Bracket

   3  typevars :
   4           | T_Le tvars T_Ge

   5  extends :
   6          | T_Extends typeapps

   7  typeapp : id
   8          | id T_Le types T_Ge
   9          | tvar

  10  funproto : T_Fun id typevars T_LParen formals T_RParen T_Semicolon
  11           | T_Fun id typevars T_LParen formals T_RParen T_Colon rtype T_Semicolon

  12  classdec : T_Class id typevars T_Implements typeapps classbody

  13  classbody : T_LCur_Bracket init bodydecs T_RCur_Bracket

  14  init : T_LParen formals T_RParen block

  15  bodydec : constdec
  16          | globaldec
  17          | fielddec
  18          | fundec

  19  constdec : T_Constant primtype id T_Set literal T_Semicolon

  20  globaldec : T_Static primtype id T_Set literal T_Semicolon

  21  fielddec : formal T_Semicolon

  22  formal : ttype id

  23  fundec : T_Fun id typevars T_LParen formals T_RParen block
  24         | T_Fun id typevars T_LParen formals T_RParen T_Colon rtype block

  25  block : T_LCur_Bracket localdecs stms T_RCur_Bracket

  26  localdec : vardec
  27           | fundec

  28  vardec : ttype id T_Set exp T_Semicolon

  29  ttype : primtype
  30        | typeapp
  31        | ttype T_LSq_Bracket T_RSq_Bracket
  32        | T_Function T_LParen T_LParen types T_RParen T_Arrow rtype T_RParen

  33  primtype : T_Bool
  34           | T_PTChar
  35           | T_PTString
  36           | T_Int
  37           | T_Float

  38  rtype : ttype
  39        | T_Void

  40  stm : T_Semicolon
  41      | exp T_Semicolon
  42      | T_If T_LParen exp T_RParen stm T_Else stm
  43      | T_While T_LParen exp T_RParen stm
  44      | T_For T_LParen vardec exp T_Semicolon exp T_RParen stm
  45      | T_Return T_Semicolon
  46      | T_Return exp T_Semicolon
  47      | block
  48      | T_Halt T_LParen exp T_RParen T_Semicolon
  49      | print_funcs

  50  exp : lhs
  51      | lhs assignop exp

  52  lhs : disjunct
  53      | disjunct orop lhs

  54  disjunct : conjunct
  55           | conjunct andop disjunct

  56  conjunct : simple
  57           | simple relop simple

  58  simple : term
  59         | simple addop term

  60  term : factor
  61       | term mulop factor

  62  factor : unop factor
  63         | literal factor_rest
  64         | T_New id T_LParen actuals T_RParen factor_rest
  65         | T_New id T_Le types T_Ge T_LParen actuals T_RParen factor_rest
  66         | T_New ttype T_LSq_Bracket exp T_RSq_Bracket factor_rest
  67         | T_Lambda T_LParen formals T_RParen block factor_rest
  68         | T_Lambda T_LParen formals T_RParen T_Colon rtype block factor_rest
  69         | T_LParen exp T_RParen factor_rest
  70         | id factor_rest

  71  factor_rest :
  72              | T_LParen actuals T_RParen factor_rest
  73              | T_Dot id factor_rest
  74              | T_LSq_Bracket exp T_RSq_Bracket factor_rest

  75  literal : T_Null
  76          | T_True
  77          | T_False
  78          | charliteral
  79          | stringliteral
  80          | intliteral
  81          | floatliteral

  82  charliteral : T_Char

  83  stringliteral : T_String

  84  intliteral : T_Const

  85  floatliteral : T_Float_Const

  86  tvars : tvar
  87        | tvar T_Comma tvars

  88  protodecs :
  89            | protodec protodecs

  90  typeapps :
  91           | typeapp typeapps_rest

  92  typeapps_rest :
  93                | T_Comma typeapp typeapps_rest

  94  funprotos :
  95            | funproto funprotos

  96  classdecs :
  97            | classdec classdecs

  98  types :
  99        | ttype types_rest

 100  types_rest :
 101             | T_Comma ttype types_rest

 102  bodydecs :
 103           | bodydec bodydecs

 104  localdecs :
 105            | localdec localdecs

 106  stms :
 107       | stm stms

 108  formals :
 109          | formal formals_rest

 110  formals_rest :
 111               | T_Comma formal formals_rest

 112  actuals :
 113          | exp actuals_rest

 114  actuals_rest :
 115               | T_Comma exp actuals_rest

 116  assignop : T_Set

 117  orop : T_Or

 118  andop : T_And

 119  relop : T_Eq
 120        | T_Neq
 121        | T_Le
 122        | T_Leq
 123        | T_Ge
 124        | T_Geq

 125  addop : T_Add
 126        | T_Sub

 127  mulop : T_Mult
 128        | T_Div

 129  unop : T_Not
 130       | T_Sub

 131  id : T_Id

 132  tvar : T_Var

 133  print_funcs : T_Printline T_LParen T_RParen T_Semicolon
 134              | T_Printint T_LParen exp T_RParen T_Semicolon
 135              | T_Printstring T_LParen exp T_RParen T_Semicolon
 136              | T_Printbool T_LParen exp T_RParen T_Semicolon
 137              | T_Printfloat T_LParen exp T_RParen T_Semicolon
 138              | T_Printchar T_LParen exp T_RParen T_Semicolon

 139  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (139)
	protodecs : .  (88)

	T_Protocol  shift 3
	T_Char  reduce 88
	T_String  reduce 88
	T_Const  reduce 88
	T_Float_Const  reduce 88
	T_Id  reduce 88
	T_Class  reduce 88
	T_If  reduce 88
	T_While  reduce 88
	T_For  reduce 88
	T_Return  reduce 88
	T_Halt  reduce 88
	T_New  reduce 88
	T_Lambda  reduce 88
	T_Null  reduce 88
	T_True  reduce 88
	T_False  reduce 88
	T_Printline  reduce 88
	T_Printbool  reduce 88
	T_Printchar  reduce 88
	T_Printstring  reduce 88
	T_Printint  reduce 88
	T_Printfloat  reduce 88
	T_Sub  reduce 88
	T_Not  reduce 88
	T_Semicolon  reduce 88
	T_LParen  reduce 88
	T_LCur_Bracket  reduce 88

	program  goto 4
	protodecs  goto 5
	protodec  goto 6


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	protodec : T_Protocol . id typevars extends T_LCur_Bracket funprotos T_RCur_Bracket  (2)

	T_Id  shift 7
	.  error

	id  goto 8


state 4
	%entry% : '\001' program .  (139)

	.  reduce 139


state 5
	program : protodecs . classdecs stm T_Eof  (1)
	classdecs : .  (96)

	T_Class  shift 9
	T_Char  reduce 96
	T_String  reduce 96
	T_Const  reduce 96
	T_Float_Const  reduce 96
	T_Id  reduce 96
	T_If  reduce 96
	T_While  reduce 96
	T_For  reduce 96
	T_Return  reduce 96
	T_Halt  reduce 96
	T_New  reduce 96
	T_Lambda  reduce 96
	T_Null  reduce 96
	T_True  reduce 96
	T_False  reduce 96
	T_Printline  reduce 96
	T_Printbool  reduce 96
	T_Printchar  reduce 96
	T_Printstring  reduce 96
	T_Printint  reduce 96
	T_Printfloat  reduce 96
	T_Sub  reduce 96
	T_Not  reduce 96
	T_Semicolon  reduce 96
	T_LParen  reduce 96
	T_LCur_Bracket  reduce 96

	classdecs  goto 10
	classdec  goto 11


state 6
	protodecs : protodec . protodecs  (89)
	protodecs : .  (88)

	T_Protocol  shift 3
	T_Char  reduce 88
	T_String  reduce 88
	T_Const  reduce 88
	T_Float_Const  reduce 88
	T_Id  reduce 88
	T_Class  reduce 88
	T_If  reduce 88
	T_While  reduce 88
	T_For  reduce 88
	T_Return  reduce 88
	T_Halt  reduce 88
	T_New  reduce 88
	T_Lambda  reduce 88
	T_Null  reduce 88
	T_True  reduce 88
	T_False  reduce 88
	T_Printline  reduce 88
	T_Printbool  reduce 88
	T_Printchar  reduce 88
	T_Printstring  reduce 88
	T_Printint  reduce 88
	T_Printfloat  reduce 88
	T_Sub  reduce 88
	T_Not  reduce 88
	T_Semicolon  reduce 88
	T_LParen  reduce 88
	T_LCur_Bracket  reduce 88

	protodecs  goto 12
	protodec  goto 6


state 7
	id : T_Id .  (131)

	.  reduce 131


state 8
	protodec : T_Protocol id . typevars extends T_LCur_Bracket funprotos T_RCur_Bracket  (2)
	typevars : .  (3)

	T_Le  shift 13
	T_Extends  reduce 3
	T_LCur_Bracket  reduce 3

	typevars  goto 14


state 9
	classdec : T_Class . id typevars T_Implements typeapps classbody  (12)

	T_Id  shift 7
	.  error

	id  goto 15


state 10
	program : protodecs classdecs . stm T_Eof  (1)

	T_Char  shift 16
	T_String  shift 17
	T_Const  shift 18
	T_Float_Const  shift 19
	T_Id  shift 7
	T_If  shift 20
	T_While  shift 21
	T_For  shift 22
	T_Return  shift 23
	T_Halt  shift 24
	T_New  shift 25
	T_Lambda  shift 26
	T_Null  shift 27
	T_True  shift 28
	T_False  shift 29
	T_Printline  shift 30
	T_Printbool  shift 31
	T_Printchar  shift 32
	T_Printstring  shift 33
	T_Printint  shift 34
	T_Printfloat  shift 35
	T_Sub  shift 36
	T_Not  shift 37
	T_Semicolon  shift 38
	T_LParen  shift 39
	T_LCur_Bracket  shift 40
	.  error

	stm  goto 41
	id  goto 42
	block  goto 43
	literal  goto 44
	exp  goto 45
	print_funcs  goto 46
	lhs  goto 47
	disjunct  goto 48
	conjunct  goto 49
	simple  goto 50
	term  goto 51
	factor  goto 52
	unop  goto 53
	charliteral  goto 54
	stringliteral  goto 55
	intliteral  goto 56
	floatliteral  goto 57


state 11
	classdecs : classdec . classdecs  (97)
	classdecs : .  (96)

	T_Class  shift 9
	T_Char  reduce 96
	T_String  reduce 96
	T_Const  reduce 96
	T_Float_Const  reduce 96
	T_Id  reduce 96
	T_If  reduce 96
	T_While  reduce 96
	T_For  reduce 96
	T_Return  reduce 96
	T_Halt  reduce 96
	T_New  reduce 96
	T_Lambda  reduce 96
	T_Null  reduce 96
	T_True  reduce 96
	T_False  reduce 96
	T_Printline  reduce 96
	T_Printbool  reduce 96
	T_Printchar  reduce 96
	T_Printstring  reduce 96
	T_Printint  reduce 96
	T_Printfloat  reduce 96
	T_Sub  reduce 96
	T_Not  reduce 96
	T_Semicolon  reduce 96
	T_LParen  reduce 96
	T_LCur_Bracket  reduce 96

	classdecs  goto 58
	classdec  goto 11


state 12
	protodecs : protodec protodecs .  (89)

	.  reduce 89


state 13
	typevars : T_Le . tvars T_Ge  (4)

	T_Var  shift 59
	.  error

	tvars  goto 60
	tvar  goto 61


state 14
	protodec : T_Protocol id typevars . extends T_LCur_Bracket funprotos T_RCur_Bracket  (2)
	extends : .  (5)

	T_Extends  shift 62
	T_LCur_Bracket  reduce 5

	extends  goto 63


state 15
	classdec : T_Class id . typevars T_Implements typeapps classbody  (12)
	typevars : .  (3)

	T_Le  shift 13
	T_Implements  reduce 3

	typevars  goto 64


state 16
	charliteral : T_Char .  (82)

	.  reduce 82


state 17
	stringliteral : T_String .  (83)

	.  reduce 83


state 18
	intliteral : T_Const .  (84)

	.  reduce 84


state 19
	floatliteral : T_Float_Const .  (85)

	.  reduce 85


state 20
	stm : T_If . T_LParen exp T_RParen stm T_Else stm  (42)

	T_LParen  shift 65
	.  error


state 21
	stm : T_While . T_LParen exp T_RParen stm  (43)

	T_LParen  shift 66
	.  error


state 22
	stm : T_For . T_LParen vardec exp T_Semicolon exp T_RParen stm  (44)

	T_LParen  shift 67
	.  error


state 23
	stm : T_Return . T_Semicolon  (45)
	stm : T_Return . exp T_Semicolon  (46)

	T_Char  shift 16
	T_String  shift 17
	T_Const  shift 18
	T_Float_Const  shift 19
	T_Id  shift 7
	T_New  shift 25
	T_Lambda  shift 26
	T_Null  shift 27
	T_True  shift 28
	T_False  shift 29
	T_Sub  shift 36
	T_Not  shift 37
	T_Semicolon  shift 68
	T_LParen  shift 39
	.  error

	id  goto 42
	literal  goto 44
	exp  goto 69
	lhs  goto 47
	disjunct  goto 48
	conjunct  goto 49
	simple  goto 50
	term  goto 51
	factor  goto 52
	unop  goto 53
	charliteral  goto 54
	stringliteral  goto 55
	intliteral  goto 56
	floatliteral  goto 57


state 24
	stm : T_Halt . T_LParen exp T_RParen T_Semicolon  (48)

	T_LParen  shift 70
	.  error


state 25
	factor : T_New . id T_LParen actuals T_RParen factor_rest  (64)
	factor : T_New . id T_Le types T_Ge T_LParen actuals T_RParen factor_rest  (65)
	factor : T_New . ttype T_LSq_Bracket exp T_RSq_Bracket factor_rest  (66)

	T_Id  shift 7
	T_Var  shift 59
	T_Function  shift 71
	T_Bool  shift 72
	T_PTChar  shift 73
	T_PTString  shift 74
	T_Int  shift 75
	T_Float  shift 76
	.  error

	id  goto 77
	typeapp  goto 78
	tvar  goto 79
	primtype  goto 80
	ttype  goto 81


state 26
	factor : T_Lambda . T_LParen formals T_RParen block factor_rest  (67)
	factor : T_Lambda . T_LParen formals T_RParen T_Colon rtype block factor_rest  (68)

	T_LParen  shift 82
	.  error


state 27
	literal : T_Null .  (75)

	.  reduce 75


state 28
	literal : T_True .  (76)

	.  reduce 76


state 29
	literal : T_False .  (77)

	.  reduce 77


state 30
	print_funcs : T_Printline . T_LParen T_RParen T_Semicolon  (133)

	T_LParen  shift 83
	.  error


state 31
	print_funcs : T_Printbool . T_LParen exp T_RParen T_Semicolon  (136)

	T_LParen  shift 84
	.  error


state 32
	print_funcs : T_Printchar . T_LParen exp T_RParen T_Semicolon  (138)

	T_LParen  shift 85
	.  error


state 33
	print_funcs : T_Printstring . T_LParen exp T_RParen T_Semicolon  (135)

	T_LParen  shift 86
	.  error


state 34
	print_funcs : T_Printint . T_LParen exp T_RParen T_Semicolon  (134)

	T_LParen  shift 87
	.  error


state 35
	print_funcs : T_Printfloat . T_LParen exp T_RParen T_Semicolon  (137)

	T_LParen  shift 88
	.  error


state 36
	unop : T_Sub .  (130)

	.  reduce 130


state 37
	unop : T_Not .  (129)

	.  reduce 129


state 38
	stm : T_Semicolon .  (40)

	.  reduce 40


state 39
	factor : T_LParen . exp T_RParen factor_rest  (69)

	T_Char  shift 16
	T_String  shift 17
	T_Const  shift 18
	T_Float_Const  shift 19
	T_Id  shift 7
	T_New  shift 25
	T_Lambda  shift 26
	T_Null  shift 27
	T_True  shift 28
	T_False  shift 29
	T_Sub  shift 36
	T_Not  shift 37
	T_LParen  shift 39
	.  error

	id  goto 42
	literal  goto 44
	exp  goto 89
	lhs  goto 47
	disjunct  goto 48
	conjunct  goto 49
	simple  goto 50
	term  goto 51
	factor  goto 52
	unop  goto 53
	charliteral  goto 54
	stringliteral  goto 55
	intliteral  goto 56
	floatliteral  goto 57


40: shift/reduce conflict (shift 7, reduce 104) on T_Id
state 40
	block : T_LCur_Bracket . localdecs stms T_RCur_Bracket  (25)
	localdecs : .  (104)

	T_Id  shift 7
	T_Var  shift 59
	T_Fun  shift 90
	T_Function  shift 71
	T_Bool  shift 72
	T_PTChar  shift 73
	T_PTString  shift 74
	T_Int  shift 75
	T_Float  shift 76
	T_Char  reduce 104
	T_String  reduce 104
	T_Const  reduce 104
	T_Float_Const  reduce 104
	T_If  reduce 104
	T_While  reduce 104
	T_For  reduce 104
	T_Return  reduce 104
	T_Halt  reduce 104
	T_New  reduce 104
	T_Lambda  reduce 104
	T_Null  reduce 104
	T_True  reduce 104
	T_False  reduce 104
	T_Printline  reduce 104
	T_Printbool  reduce 104
	T_Printchar  reduce 104
	T_Printstring  reduce 104
	T_Printint  reduce 104
	T_Printfloat  reduce 104
	T_Sub  reduce 104
	T_Not  reduce 104
	T_Semicolon  reduce 104
	T_LParen  reduce 104
	T_LCur_Bracket  reduce 104
	T_RCur_Bracket  reduce 104

	id  goto 91
	typeapp  goto 78
	tvar  goto 79
	fundec  goto 92
	primtype  goto 80
	ttype  goto 93
	localdecs  goto 94
	localdec  goto 95
	vardec  goto 96


state 41
	program : protodecs classdecs stm . T_Eof  (1)

	T_Eof  shift 97
	.  error


state 42
	factor : id . factor_rest  (70)
	factor_rest : .  (71)

	T_LParen  shift 98
	T_LSq_Bracket  shift 99
	T_Dot  shift 100
	T_Set  reduce 71
	T_Or  reduce 71
	T_And  reduce 71
	T_Eq  reduce 71
	T_Neq  reduce 71
	T_Le  reduce 71
	T_Leq  reduce 71
	T_Ge  reduce 71
	T_Geq  reduce 71
	T_Add  reduce 71
	T_Sub  reduce 71
	T_Mult  reduce 71
	T_Div  reduce 71
	T_Semicolon  reduce 71
	T_Comma  reduce 71
	T_RParen  reduce 71
	T_RSq_Bracket  reduce 71

	factor_rest  goto 101


state 43
	stm : block .  (47)

	.  reduce 47


state 44
	factor : literal . factor_rest  (63)
	factor_rest : .  (71)

	T_LParen  shift 98
	T_LSq_Bracket  shift 99
	T_Dot  shift 100
	T_Set  reduce 71
	T_Or  reduce 71
	T_And  reduce 71
	T_Eq  reduce 71
	T_Neq  reduce 71
	T_Le  reduce 71
	T_Leq  reduce 71
	T_Ge  reduce 71
	T_Geq  reduce 71
	T_Add  reduce 71
	T_Sub  reduce 71
	T_Mult  reduce 71
	T_Div  reduce 71
	T_Semicolon  reduce 71
	T_Comma  reduce 71
	T_RParen  reduce 71
	T_RSq_Bracket  reduce 71

	factor_rest  goto 102


state 45
	stm : exp . T_Semicolon  (41)

	T_Semicolon  shift 103
	.  error


state 46
	stm : print_funcs .  (49)

	.  reduce 49


state 47
	exp : lhs .  (50)
	exp : lhs . assignop exp  (51)

	T_Set  shift 104
	T_Semicolon  reduce 50
	T_Comma  reduce 50
	T_RParen  reduce 50
	T_RSq_Bracket  reduce 50

	assignop  goto 105


state 48
	lhs : disjunct .  (52)
	lhs : disjunct . orop lhs  (53)

	T_Or  shift 106
	T_Set  reduce 52
	T_Semicolon  reduce 52
	T_Comma  reduce 52
	T_RParen  reduce 52
	T_RSq_Bracket  reduce 52

	orop  goto 107


state 49
	disjunct : conjunct .  (54)
	disjunct : conjunct . andop disjunct  (55)

	T_And  shift 108
	T_Set  reduce 54
	T_Or  reduce 54
	T_Semicolon  reduce 54
	T_Comma  reduce 54
	T_RParen  reduce 54
	T_RSq_Bracket  reduce 54

	andop  goto 109


state 50
	conjunct : simple .  (56)
	conjunct : simple . relop simple  (57)
	simple : simple . addop term  (59)

	T_Eq  shift 110
	T_Neq  shift 111
	T_Le  shift 112
	T_Leq  shift 113
	T_Ge  shift 114
	T_Geq  shift 115
	T_Add  shift 116
	T_Sub  shift 117
	T_Set  reduce 56
	T_Or  reduce 56
	T_And  reduce 56
	T_Semicolon  reduce 56
	T_Comma  reduce 56
	T_RParen  reduce 56
	T_RSq_Bracket  reduce 56

	relop  goto 118
	addop  goto 119


state 51
	simple : term .  (58)
	term : term . mulop factor  (61)

	T_Mult  shift 120
	T_Div  shift 121
	T_Set  reduce 58
	T_Or  reduce 58
	T_And  reduce 58
	T_Eq  reduce 58
	T_Neq  reduce 58
	T_Le  reduce 58
	T_Leq  reduce 58
	T_Ge  reduce 58
	T_Geq  reduce 58
	T_Add  reduce 58
	T_Sub  reduce 58
	T_Semicolon  reduce 58
	T_Comma  reduce 58
	T_RParen  reduce 58
	T_RSq_Bracket  reduce 58

	mulop  goto 122


state 52
	term : factor .  (60)

	.  reduce 60

